<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for consistency checking.</description>
  <maintainer email="zhe.shen@tier4.jp">Zhe Shen</maintainer>
  <maintainer email="takayuki.murooka@tier4.jp">Takayuki Murooka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
